# otbv-python

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  install.sh  octvencode.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
otbv/: converter.py  encoding.py  exceptions.py  io.py
samples/: 32x32x32_dense.octv  32x32x32_sparse.octv  test_file.otbv
src/: octvencode.py  otbv.cpp  otbv.py
src/octvencode/: octvencode.py
tests/: test_end_to_end.py  test_unit.py
